ss-69: * text wrap overflow fix

--- a/frontend/src/bundles/common/components/user-settings-tabs/styles.module.scss
+++ b/frontend/src/bundles/common/components/user-settings-tabs/styles.module.scss
@@ -18,6 +18,9 @@
 
 .title {
     padding: 0 var(--p-4) 0 var(--p-2);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .tab:hover {
